project/stage/semantic_tests/accept/3.1_valid.ul
void main() {
    // 3.1.1
    if (true) {
        print "true if statement";
    }
    boolean bool;

    // 3.1.2
    bool = true;
    while (true) {
        print "looping while once";
        bool = false;
    }

    // 3.1.3 & 3.1.4
    print 5;
    println "new line";

    // 3.1.6
    int a;
    float b;
    b = a;
}

// 3.1.5
float foo() {
    int a;
    a = 5;
    return a;
}