project/stage/semantic_tests/reject/0_2_func_call.ul
void main() {
    int a;
    foo();
}

void foo(int a, float b) {
    print a;
    print b;
}
